# eSchool

./: README.md  pyproject.toml
src/backend/src/core/: config.py
src/backend/src/core/db/: connect_db.py  db.py
src/backend/src/core/db/daos/: Base.py  User.py
src/backend/src/core/db/models/: user.py
src/backend/src/migrations/: env.py
src/backend/src/routers/: auth.py
src/backend/src/schemas/: __init__.py  auth_schemas.py
