[tool.poetry]
name = "eschool"
version = "0.1.0"
description = ""
authors = ["BasyaZSkot <145144460+BasyaZSkot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.119.1"
alembic = "^1.17.0"
sqlalchemy = "^2.0.44"
pydantic = "^2.12.3"
uvicorn = "^0.38.0"
pydantic-settings = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
